--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "Modern Python setup for packages."
 authors = ["Thomas van Hees <8236465+thomasvanhees@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8,<4.0"
+pandas = "^1.4.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
@@ -24,3 +25,10 @@ markers = [
 log_level = "DEBUG"
 log_format = "%(asctime)s [%(levelname)s] %(message)s"
 log_date_format = "%Y-%m-%d %H:%M:%S"
+
+[tool.isort]
+profile = "black"
+combine_as_imports = true
+lines_between_types = 1
+lines_after_imports = 2
+src_paths = ["src", "tests"]
