--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,5 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
-fail_fast: true
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.2.0
@@ -22,6 +21,11 @@ repos:
     hooks:
       - id: python-no-eval
       - id: python-use-type-annotations
+  - repo: https://github.com/hadialqattan/pycln
+    rev: v1.3.3
+    hooks:
+      - id: pycln
+        args: [--all]
   - repo: https://github.com/pycqa/isort
     rev: "5.10.1"
     hooks:
@@ -30,3 +34,7 @@ repos:
     rev: "22.3.0"
     hooks:
       - id: black
+  - repo: https://github.com/pycqa/flake8
+    rev: 4.0.1
+    hooks:
+      - id: flake8
