--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ pandas = "^1.4.2"
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 mypy = "^0.960"
-pandas-stubs = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -34,3 +33,12 @@ combine_as_imports = true
 lines_between_types = 1
 lines_after_imports = 2
 src_paths = ["src", "tests"]
+
+[tool.mypy]
+files = "src"
+strict = true
+pretty = true
+
+[[tool.mypy.overrides]]
+module = "pandas.*"
+ignore_missing_imports = true
