--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 isolated_build = true
-envlist = py39,mypy
+envlist = py38,py39,mypy,sca
 
 [testenv]
 allowlist_externals = poetry
@@ -9,6 +9,12 @@ commands =
     poetry run pytest
 
 [testenv:mypy]
+basepython = python3.9
 commands =
     poetry install -vv --no-root
     poetry run mypy
+
+[testenv:sca]
+allowlist_externals = pre-commit
+commands =
+    pre-commit run --all-files
