--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths-ignore:
       - 'docs/**'
-      - '.github/workflows/**'
+      - '.github/workflows/docs.yml'
     branches:
       - 'feature/*'
   pull_request:
